# cloud-sdk-python

./: .env_integration_tests.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  debug_k8s_telemetry.py  pyproject.toml
.claude/commands/: release-prep.md  review-new-module.md
.claude/config/: baseline.json  module-aliases.yaml  rules.yaml
.claude/scripts/: aggregate.sh  check-bdd.sh  check-binding-shape.sh  check-commits.sh  check-concurrency.sh  check-constants.sh  check-deletion-hygiene.sh  check-deps-supply.sh  check-disclosure.sh  check-docs.sh  check-errors-logging.sh  check-hardcode.sh  check-http-hygiene.sh  check-license-spdx.sh  check-patterns.sh  check-pr-size.sh  check-quality-gate-parity.sh  check-secrets.sh  check-telemetry.sh  check-testing-depth.sh  check-versioning.sh  orchestrate.sh
.claude/tests/: test_baseline_contract.bats  test_extended.bats  test_fp_remediation.bats  test_signals.bats  test_smoke.bats
.cursor/: mcp.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: README.md  build.yaml  check-version-bump.yaml  check-version-bump.yml  checks.yaml  (+11 more)
app/: test_mcp_tools_with_number_arg.py
docs/: BRANCH-PROTECTION-SETUP.md  DEVELOPMENT.md  GUIDELINES.md  INTEGRATION_TESTS.md  INTEGRATION_TESTS_ADMS.md  PR-REVIEW.md  RELEASE.md
local/: agw_credentials.json
mocks/: certificates.json  destination.json
scripts/: adms_cli.py  verify_invoke_agent_jaeger_integration.py
tests/: __init__.py
(+600 files in other folders)
